@@ -12,8 +12,7 @@ recipe = zc.recipe.egg
 eggs =
     pytest
     pytest-pep8
-    mr.developer
-    mr.developer.addon
+    mr.developer [test]
 
 [coverage]
 recipe = zc.recipe.egg
